static/css/main.css
/* ... */
#guestbooks___guestbook-messages-container blockquote {
    border: none;
    color: var(--text);
    font-style: normal;
    margin: 0;
    padding: 0;
}

#guestbooks___guestbook-messages-container > div {
    background: var(--accent-1);
    border: 1px solid var(--accent-2);
    border-radius: var(--border-radius);
    margin: 1.5rem 0;
    padding: 0.1rem 3rem 2rem;
}

#guestbooks___challenge-answer-container br,
.guestbooks___input-container label[for="challengeQuestionAnswer"] {
    display: none;
}

footer {
    color: var(--accent-3);
    font-size: 1.6rem;
    margin: 0 auto 2rem;
    max-width: var(--site-width);
    padding: 0.5rem 2rem 3rem;
    text-align: center;
}

footer p {
    margin: 0;
}

.credits {
    margin-top: 3rem;
}

#to-top {
    display: none;
}

.to-top {
    background: var(--text);
    border-radius: 50%;
    border: none;
    bottom: 1.75rem;
    box-shadow: none;
    cursor: pointer;
    height: 3.6rem;
    opacity: 70%;
    padding: 0 1rem;
    position: fixed;
    right: 1.75rem;
    transition: all 0.2s ease;
    vertical-align: middle;
    width: 3.6rem;
}

.to-top:hover {
    opacity: 100%;
}

.to-top svg {
    display: block;
    fill: var(--background);
}

.tinylytics_kudos,
.tiny_hits,
a.conversation-on-mb,
a.reply-on-mastodon,
a.reply-by-email {
    background-color: var(--accent-1);
    border-radius: var(--border-radius);
    border: 1px solid var(--accent-2);
    color: var(--accent-3);
    display: inline-block;
    font-size: 1.4rem;
    line-height: 1.6;
    margin: 2px 0;
    padding: 2px 10px;
    text-decoration: none;
}

.tinylytics_kudos:hover,
a.conversation-on-mb:hover,
a.reply-on-mastodon:hover,
.tinylytics_kudos:active,
a.reply-by-email:hover,
a.reply-by-email:active,
a.conversation-on-mb:active,
a.reply-on-mastodon:active,
.did_select {
    background: var(--link);
    border: 1px solid var(--link);
    color: var(--background);
}

.tiny_webring {
    display: block;
}

.tiny_uptime::before {
    content: " · ";
}

.tiny_countries {
    display: block;
    font-size: 2rem;
    letter-spacing: 2px;
    line-height: 1;
    margin: 4rem auto 0 auto;
    max-width: 78rem;
    word-break: break-word;
}

a.tinylytics_webring {
    display: inline;
    line-height: 30px;
}

.tinylytics_webring_avatar {
    background: var(--background);
    border-radius: var(--border-radius);
    height: auto;
    margin-right: 6px;
    vertical-align: middle;
    width: 24px;
}

.microblog_collection {
    display: grid !important;
    grid-template-columns: repeat(3, 1fr) !important;
    gap: 1rem !important;
    width: 100% !important;
    margin: 3rem auto !important;
    width: 100% !important;
}

.microblog_collection img {
    width: 100% !important;
    height: auto !important;
    object-fit: cover !important;
    aspect-ratio: 1 / 1;
    margin: 0 !important;
    border-radius: var(--border-radius) !important;
}

.microblog_collection img:hover {
    -moz-filter: brightness(70%);
    -webkit-filter: brightness(70%);
    filter: brightness(70%);
    transition: ease-in-out 0.25s;
}

@media (max-width: 600px) {
    .microblog_collection {
        grid-template-columns: repeat(2, 1fr) !important;
    }
}

@media (max-width: 375px) {
    .microblog_collection {
        grid-template-columns: repeat(1, 1fr) !important;
    }
}

.microblog_collection img:hover {
    filter: brightness(70%);
}

.microblog_lightbox_nav {
    font-size: 2rem !important;
    line-height: 40px;
}

#microblog_lightbox_close_btn {
    font-size: 2.5rem !important;
}

div.e-content {
    clear: both;
}

.microblog_book {
    border-radius: 0;
    margin: 2.4rem 0 0 2rem !important;
    border: 1px solid var(--accent-2);
    object-fit: contain;
    float: right;
    text-align: right;
    max-width: 7rem !important;
}

div.e-content .microblog_book {
    margin-top: 0 !important;
}

img.bookshelf__cover {
    border-radius: 0;
}

@media only screen and (max-width: 768px) {
    body {
        line-height: 1.5111;
        overscroll-behavior: contain;
    }

    .header {
        margin: 0;
    }

    .site-title {
        font-size: 1.8rem;
    }

    .site-nav {
        background: var(--background);
        font-size: 2rem;
        position: relative;
        z-index: 10020;
    }

    .site-nav ul {
        height: 100dvh;
        justify-content: start;
        padding: 4rem 0;
    }

    .nav-menu {
        background-color: var(--background);
        border-radius: 0;
        flex-direction: column;
        height: 100dvh;
        left: -100%;
        overflow: hidden;
        position: fixed;
        text-align: center;
        top: 0;
        transition: 0.3s;
        width: 100%;
        z-index: 10000;
    }

    .nav-menu.active {
        left: 0;
        margin: 0;
        padding: 10rem 0;
        top: 0;
    }

    .nav-item {
        margin: 1.5rem 0;
    }

    .hamburger {
        cursor: pointer;
        display: block;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(5px) rotate(45deg);
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-5px) rotate(-45deg);
    }

    .pinned {
        margin-left: -1rem;
        margin-right: -1rem;
        width: calc(100% + 2rem);
    }

    .to-top {
        opacity: 100%;
    }

    input.subscribe-input {
        width: 100%;
    }

    input.subscribe-submit {
        padding: 9px;
        width: 100%;
    }
}

